# GravitySim

./: .clang-format  .clangd  CMakeLists.txt  LICENSE
.cache/clangd/index/: main.cpp.825E40BD98EAF929.idx
Includes/: Colors.h  Simulator_gui.h  Utils.h  ball.h  simulator_core.h
include/: Ball.h  SimState.h  Simulator.h
src/: SimState.cpp  Simulator.cpp  Simulator_gui.cpp  ball.cpp  main.cpp  simulator_core.cpp  todo.txt
